# kimi-cheatsheet

./: .gitignore  README.md
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-icon.rgba
src-tauri/src/: lib.rs
